--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -139,7 +139,7 @@ L<perllocale/Collation of strings containing embedded C<NUL> characters>.
 
 =head2 Lexical subroutines are no longer experimental
 
-Using the C<lexical_subs> feature no longer emits a warning. Existing
+Using the C<lexical_subs> feature introduced in v5.18 no longer emits a warning. Existing
 code that disables the C<experimental::lexical_subs> warning category
 that the feature previously used will continue to work. The
 C<lexical_subs> feature has no effect; all Perl code can use lexical
