perldelta: clarify how undeffing HV/AV is faster now
There were better notes in the change that introduced this[1]. Copy
the performance numbers from there, and say "arrays and
hashes". instead of "AV and HV". Better to use the more familiar names
than the internal struct names which are mostly only familiar to core
devs.

1. be98855787 ("speed up AV and HV clearing/undeffing", 2016-10-26)

--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -332,7 +332,22 @@ Enhancements in Regex concat COW implementation.
 
 =item *
 
-Speed up C<AV> and C<HV> clearing/undeffing.
+Clearing hashes and arrays has been made slightly faster. Now code
+like this is around 5% faster:
+
+    my @a;
+    for my $i (1..3_000_000) {
+        @a = (1,2,3);
+        @a = ();
+    }
+
+and this code around 3% faster:
+
+    my %h;
+    for my $i (1..3_000_000) {
+        %h = qw(a 1 b 2);
+        %h = ();
+    }
 
 =item *
 
