perldelta: clarify what '.' and @INC is about
The existing section we had here was totally misleading. I couldn't
understand "now provides a way to build" and "if you want it turn X
on" differently than meaning that '.' was still in @INC by default and
you had to compile perl with some optional switch to turn it on.

It turns out[1] that the exact opposite of that is the case. This is
on by default. Rewrite the entire section to make that clear to the
reader.

While I'm at it dumb it down a bit to be understandable to someone
who's just upgrading Perl. Not everyone knows what @INC is offhand,
but describing how we now load libraries is understandable to
everyone.

Then cover PERL_USE_UNSAFE_INC=1 and how it's set by various toolchain
modules now, and finally avoid talking about both
DEFAULT_INC_EXCLUDES_DOT and -Ddefault_inc_excludes_dot in the context
of a build option, just consistently mention only
-Ddefault_inc_excludes_dot.

We could go into much more detail here. See the "[RFC] We need prose
for perl526delta about "." in @INC removal" thread[2]. I think
including something like that probably makes sense later in the
document, but this should suffice for an intro section, and I'll let
others who proposed more detailed updates send their own patches for
further clarifying this feature.

1. "Re: Perl 5.26.0-RC1 is now
   available!" (<CAATnKFABh0PjQK0WLqC-MTugj==O22zjwRgDapfb1EHvLr0tKw@mail.gmail.com>"
2. <CAATnKFCSeGh6Lcwux1CsGP=6pQSQtG7_bViZRGji3Soa5b=1ow@mail.gmail.com>
   (http://www.nntp.perl.org/group/perl.perl5.porters/2017/03/msg243763.html)

--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -64,13 +64,25 @@ prints "Hello there\n" with no leading whitespace.
 
 =head2 '.' and @INC
 
-Perl now provides a way to build perl without C<.> in @INC by default. If you
-want this feature, you can build with -Ddefault_inc_excludes_dot
+Since time immemorial Perl has, as a last resort, loaded libraries
+from the current directory. For security reasons this is no longer the
+case, the C<@INC> variable no longer contains C<.> as its last element
+by default.
 
-Because the testing / make process for perl modules does not function well with
-C<.> missing from @INC, Perl now supports the environment variable
-PERL_USE_UNSAFE_INC=1 which makes Perl behave as it previously did, returning
-C<.> to @INC in all child processes.
+If you want to disable this behavior at compile-time build perl with
+C<-Udefault_inc_excludes_dot> (C<-Ddefault_inc_excludes_dot> being the
+default now).
+
+If you'd like to add C<.> back to C<@INC> at runtime set
+C<PERL_USE_UNSAFE_INC=1> in the environment before starting
+perl. Setting it to 1 restores C<.> in the C<@INC> when perl otherwise
+lacks it.
+
+Various toolchain modules will set C<PERL_USE_UNSAFE_INC=1>
+themselves. E.g. L<Test::Harness> sets it since loading modules from a
+relative path is a common idiom in test code. If you find that you
+have C<.> in C<@INC> on a perl built with default settings it's likely
+that your code is being invoked by a toolchain module of some sort.
 
 =head2 @{^CAPTURE}, %{^CAPTURE}, and %{^CAPTURE_ALL}
 
@@ -200,7 +212,8 @@ the end of the supplied buffer.
 =head2 Remove current dir (C<.>) from C<@INC>
 
 For security reasons, C<@INC> no longer contains the default directory
-(C<.>).
+(C<.>). See L<the Core Enhancements section/"'.' and @INC"> for
+details.
 
 =head2 "Escaped" colons and relative paths in PATH
 
@@ -1654,7 +1667,7 @@ tests for perlbug. [perl #128020]
 
 =item *
 
-C<DEFAULT_INC_EXCLUDES_DOT> has been turned on as default.
+C<-Ddefault_inc_excludes_dot> has been turned on as default.
 
 =item *
 
