--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -1583,8 +1583,7 @@ the C<encoding> pragma, is no longer supported as of Perl 5.26.0.
 Since C<.> is now removed from C<@INC> by default, C<do> will now trigger
 a warning recommending to fix the C<do> statement:
 
-L<do "%s" failed, '.' is no longer in @INC|perldiag/do "%s" failed, '.' is no
-longer in @INC; did you mean do ".\/%s"?>
+L<do "%s" failed, '.' is no longer in @INC|perldiag/do "%s" failed, '.' is no longer in @INC; did you mean do ".E<sol>%s"?>
 
 =back
 
