--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -3077,10 +3077,10 @@ L<[perl #126182]|https://rt.perl.org/Public/Bug/Display.html?id=126182>
 
 Jon Portnoy (AVENJ), a prolific Perl author and admired Gentoo community
 member, has passed away on August 10, 2016.  He will be remembered and
-missed by all those with which he came in contact and enriched with his
+missed by all those who he came in contact with, and enriched with his
 intellect, wit, and spirit.
 
-It is with great sadness we also note Kip Hampton's passing..  Probably
+It is with great sadness that we also note Kip Hampton's passing.  Probably
 best known as the author of the Perl & XML column on XML.com, he was a
 core contributor to AxKit, an XML server platform that became an Apache
 Foundation project.  He was a frequent speaker in the early days at
